--- a/application/views/scripts/admin/clients/add.phtml
+++ b/application/views/scripts/admin/clients/add.phtml
@@ -33,7 +33,7 @@
             <div class="panel-body">
                 
                 
-                <form class="form-horizontal" method="post" action="">
+                <form class="form-horizontal" method="post" action="" enctype="multipart/form-data">
                     <input type="hidden" name="task" value="save">
                     
                     <fieldset>
