--- a/application/views/scripts/admin/clients/edit.phtml
+++ b/application/views/scripts/admin/clients/edit.phtml
@@ -32,7 +32,7 @@
             <div class="panel-body">
                 
                 
-                <form class="form-horizontal" method="post" action="">
+                <form class="form-horizontal" method="post" action="" enctype="multipart/form-data">
                     <input type="hidden" name="task" value="update">
                     
                     <fieldset>
@@ -46,12 +46,12 @@
                                 <?php
                                     echo $form->getElement('name')->setAttribs(array(
                                         'class' => 'form-control input-md',
-                                        'placeholder' => 'Enter client\'s first name',
+                                        'placeholder' => 'Enter client\'s name',
                                         'id' => 'first_name',
                                         'required' => 'required'
                                     ));
                                 ?>
-                                <span class="help-block">min 3, max 255 cgaracters</span>  
+                                <span class="help-block">min 3, max 255 characters</span>  
                             </div>
                             <div class="col-md-4">
                                 <?php if ($form->getElement('name')->hasErrors()) { ?>
@@ -71,9 +71,8 @@
                                 <?php
                                     echo $form->getElement('description')->setAttribs(array(
                                         'class' => 'form-control input-md',
-                                        'placeholder' => 'Enter client\'s last name',
-                                        'id' => 'description',
-                                        'required' => ''
+                                        'placeholder' => 'Enter client\'s description',
+                                        'id' => 'description'
                                     ));
                                 ?>
                                 <span class="help-block">min 3, max 255 characters</span>  
@@ -89,8 +88,30 @@
                             </div>
                         </div>
 
-                       
 
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="client_photo">Photo</label>
+                            <div class="col-md-4">
+                                <div>
+                                    <a href="#" class="thumbnail">
+                                        <img src="<?php echo $this->clientImgUrl($this->client); ?>">
+                                    </a>
+                                </div>
+
+                                <input type="file" name="client_photo" id="client_photo" class="form-control input-md">
+                                <span class="help-block">change photo</span>
+                            </div>
+
+                            <div class="col-md-4">
+                                <?php if ($form->getElement('client_photo')->hasErrors()) { ?>
+                                    <div class="has-error">
+                                        <?php foreach ($form->getElement('client_photo')->getMessages() as $message) { ?>
+                                            <p class="help-block"><?php echo $this->escape($message); ?></p>
+                                        <?php } ?>
+                                    </div>
+                                <?php } ?>
+                            </div>
+                        </div>                                                          
 
                         
 
