--- a/application/views/scripts/admin/members/add.phtml
+++ b/application/views/scripts/admin/members/add.phtml
@@ -33,7 +33,7 @@
             <div class="panel-body">
                 
                 
-                <form class="form-horizontal" method="post" action="">
+                <form class="form-horizontal" method="post" action="" enctype="multipart/form-data">
                     <input type="hidden" name="task" value="save">
                     
                     <fieldset>
@@ -52,7 +52,7 @@
                                         'required' => 'required'
                                     ));
                                 ?>
-                                <span class="help-block">min 3, max 255 cgaracters</span>  
+                                <span class="help-block">min 3, max 255 characters</span>  
                             </div>
                             <div class="col-md-4">
                                 <?php if ($form->getElement('first_name')->hasErrors()) { ?>
